deploy/fan-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fan-1
  namespace: aiot  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fan-1
  template:
    metadata:
      labels:
        app: fan-1
    spec:
      containers:
      - name: fan-1
        image: janakiramm/fan
        imagePullPolicy: Always
