deploy/fan-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fan-2
  namespace: aiot  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fan-2
  template:
    metadata:
      labels:
        app: fan-2
    spec:
      containers:
      - name: fan-2
        image: janakiramm/fan
        imagePullPolicy: Always
