deploy/predict.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: predict
  namespace: aiot  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: predict
  template:
    metadata:
      labels:
        app: predict
    spec:
      containers:
      - name: predict
        image: janakiramm/predict
