deploy/telegraf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
  namespace: aiot  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraf
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      containers:
      - name: telegraf
        image: telegraf:1.14-alpine
        ports:
        - name: udp
          protocol: UDP
          containerPort: 8092
        - name: http
          containerPort: 8186
        volumeMounts:
        - name: config
          mountPath: /etc/telegraf
        resources:
          requests:
            cpu: 50m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 500Mi
      volumes:
      - name: config
        configMap:
          name: telegraf-conf
