deploy/infer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infer
  namespace: aiot  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infer
  template:
    metadata:
      labels:
        app: infer
    spec:
      containers:
      - name: infer
        image: janakiramm/score
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: model-data
          mountPath: /data
      volumes:
      - name: model-data
        persistentVolumeClaim:
          claimName: infer-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: infer
  namespace: aiot  
spec:
  selector:
    app: infer
  type: ClusterIP
  ports:
    - protocol: TCP
      name: "5000"
      port: 5000
      targetPort: 5000
